# enji_but_pyqt

./: .gitignore  ASCII-1.txt  README.md  components.py  cover.py  main.py  music.m4a  pyproject.toml  test.py
frames/teto1/: metadata.json
frames/teto2/: metadata.json
frames/teto3/: metadata.json
frames/teto4/: metadata.json
frames/teto5/: metadata.json
frames/teto6/: metadata.json
tools/: batch_color_replce.py  batch_rect_cover.py  keyframe_extract.py  readme.txt
